--- a/010_Methods_results_word.Rmd
+++ b/010_Methods_results_word.Rmd
@@ -1,13 +1,10 @@
 ---
-title: "Methods and results - for report"
+title: "IPCW - analyses of changes and levels in NO3 and TOC/TON"
 author: "DHJ"
-date: "15 10 2021"
-output: 
-  github_document:
-    toc: true  
-    toc_depth: 4
-
+date: "18 10 2021"
+output: word_document
 ---
+
 
 ## Overview of analyses    
 
@@ -54,6 +51,8 @@ output:
 * The figure below is an example for 'NO3 decrease', where the data set is first split according to altitude (below or above 227 m.a.s.l.), then each subset is split again two times (the first-split variable, altitude in this case, can have been used again for the next splits, but in this case it was outcompeted by other variables)   
     - The columns at the bottom shows the predictions of the model. E.g. for a site above 227 m.a.s.l. and with > 70% deciduous/mixed forest, only 10% of the stations had decreasing NO3_decline
 ![decision tree with 6 branches](160a_Time_series_results_James_allvars_files/figure-html/unnamed-chunk-15-1.png)   
+
+
 
 * Two good things about decision trees are 1) they incorporate interactions between variables easily, and 2) they are easy to interpret. The bad thing is that we have no idea bout the uncertainty of the model and whether small changes in the data could have given us a very different tree. The random forest algorithm tries to fix that by making a large number of trees (e.g., 100 trees), where the data used to make each tree differs slightly, in two ways: First, at each split, the algorithm randomly selects a subset of features which can be used as candidates for splitting the data. Secondly, each tree draws a random sample of data from the training dataset when generating its splits.       
 
@@ -509,5 +508,7 @@ For a single decision tree, prediction is simple, as shown above. For a random f
 ![partial effects](162d_Currentstatus_TOCTON_no_TOC_TON_files/figure-html/unnamed-chunk-19-1.png)   
 ![partial effects](162d_Currentstatus_TOCTON_no_TOC_TON_files/figure-html/unnamed-chunk-19-2.png)   
 ![partial effects](162d_Currentstatus_TOCTON_no_TOC_TON_files/figure-html/unnamed-chunk-19-3.png)   
+
+
 
 
