Remove Polish station PL05 ('162' scripts)

--- a/162parm_Currentstatus.Rmd
+++ b/162parm_Currentstatus.Rmd
@@ -326,7 +326,8 @@ gg
 ## 4. Select data   
 
 ### a. Selection of variables    
-* Select variables to use, and thereby also cases
+* Select variables to use, and thereby also cases  
+* Also remove PL05, which has dubious values   
 ```{r}
 
 
@@ -347,6 +348,10 @@ cat("-------------------------------------------------------------\n")
 cat("Variables: \n")
 cat(params$selected_vars)
 cat("\n-------------------------------------------------------------\n")
+
+sel <- dat$station_code %in% "PL05"
+dat <- dat[!sel,]
+message(sum(sel), " station removed - station PL05 (has dubious NO3 data)")  
 
 # debugonce(get_data_for_analysis)
 # df_analysis <- get_data_for_analysis(dat, vars)  
